definition/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: onlinecolorshop-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: onlinecolorshop.com
    http:
      paths:
      - path: /red
        pathType: Prefix
        backend:
          service:
            name: red-service
            port:
              number: 3000
      - path: /blue
        pathType: Prefix
        backend:
          service:
            name: blue-service
            port:
              number: 3000
      - path: /green
        pathType: Prefix
        backend:
          service:
            name: green-service
            port:
              number: 3000
      - path: /
        pathType: Prefix
        backend:
          service:
            name: home-service
            port:
              number: 3000
